fix arrows in dark mode

--- a/css/layout.css
+++ b/css/layout.css
@@ -9,6 +9,7 @@
   --shadow: rgb( 0, 0, 0, 0.15);
   --hover: rgba( 215, 245, 245, 1 );
   --active: rgba( 215, 245, 245, .5 );
+  --select-svg: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='%23000000'><polygon points='0,0 100,0 50,50'/></svg>");
 
 }
 @media ( prefers-color-scheme: dark ) {
@@ -21,6 +22,7 @@
     --shadow: rgb( 255, 255, 255, 0.15);
     --hover: rgba( 15, 45, 45, 1 );
     --active: rgba( 215, 245, 245, .3 );
+    --select-svg: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='%23ffffff'><polygon points='0,0 100,0 50,50'/></svg>");
 	}
 }
 .dark-mode-off {
@@ -32,8 +34,9 @@
   --shadow: rgb( 0, 0, 0, 0.15);
   --hover: rgba( 215, 245, 245, 1 );
   --active: rgba( 215, 245, 245, .5 );
-
+  --select-svg: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='%23000000'><polygon points='0,0 100,0 50,50'/></svg>");
 }
+
 .dark-mode-on {
   --background: #333333;
   --background-ui: rgb(0,0,0);
@@ -43,6 +46,7 @@
   --shadow: rgb( 255, 255, 255, 0.15);
   --hover: rgba( 15, 45, 45, 1 );
   --active: rgba( 215, 245, 245, .3 );
+  --select-svg: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='%23ffffff'><polygon points='0,0 100,0 50,50'/></svg>");
 }
 
 html {
